--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,9 @@
 	  <plugins>
 	    <plugin>
 	      <!-- Build an executable JAR -->
-	      <groupId>org.apache.maven.plugins</groupId>
-	      <artifactId>maven-jar-plugin</artifactId>
-	      <version>3.1.0</version>
+	      <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.6.0.1398</version>
 	      <configuration>
 	        <archive>
 	          <manifest>
