--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,22 @@
 		</dependency>
 
 	</dependencies>
+	<distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>KK FUNDA Releases Nexus Repository</name>
+	      <url>http://65.0.103.150:8081/repository/jio-release/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>KK FUNDA Snapshot Nexus Repository </name>
+	      <url>http://65.0.103.150:8081/repository/jio-snapshot/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>
+	
 
 	<!-- Committing and updating changes through Maven, by using below mvn command. 
 		For Commiting mvn -Dmessage="Updated using maven" scm:checkin For updating 
